--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.12"
 django = "4.2.7"
 psycopg2 = "^2.9.9"
 djangorestframework = "^3.14.0"
+httpx = "^0.25.2"
+schedule = "^1.2.1"
+redis = "^5.0.1"
+drf-spectacular = "^0.26.5"
 
 
 [build-system]
