--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ httpx = "^0.25.2"
 schedule = "^1.2.1"
 redis = "^5.0.1"
 drf-spectacular = "^0.26.5"
+pytest-django = "^4.7.0"
+pytest-factoryboy = "^2.6.0"
 
 
 [build-system]
