--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,35 @@
-version: '3'
-
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - static_volume:/home/app/staticfiles
+      - static_volume:/home/app/web/staticfiles
+    expose:
+      - 8000
     ports:
-      - "8000:8000"
+      - 8000:8000
+    env_file:
+      - .env.sample
     depends_on:
-      - postgres
-      - redis
+      - db
+  db:
+    image: postgres:14-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+      - ./postgres_data:/var/bk/
+    env_file:
+      - .env.sample.db
 
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: 'postgres'
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'postgres'
+#  nginx:
+#    build: ./nginx
+#    volumes:
+#      - static_volume:/home/app/web/staticfiles
+#    ports:
+#      - 8000:80
+#    depends_on:
+#      - web
 
-  redis:
-    image: "redis:alpine"
 
 volumes:
   postgres_data:
