--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ drf-spectacular = "^0.26.5"
 pytest-django = "^4.7.0"
 pytest-factoryboy = "^2.6.0"
 gunicorn = "^21.2.0"
+pydantic = {extras = ["dotenv"], version = "^2.5.2"}
+pydantic-settings = "^2.1.0"
 
 
 [build-system]
