--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest-factoryboy = "^2.6.0"
 gunicorn = "^21.2.0"
 pydantic = {extras = ["dotenv"], version = "^2.5.2"}
 pydantic-settings = "^2.1.0"
+black = "^23.11.0"
 
 
 [build-system]
