--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,23 @@
+version: '3.8'
+
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - static_volume:/home/app/web/staticfiles
-    expose:
-      - 8000
-    ports:
-      - 8000:8000
-    env_file:
-      - .env.sample
-    depends_on:
-      - db
   db:
     image: postgres:14-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+
+
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
-      - ./postgres_data:/var/bk/
-    env_file:
-      - .env.sample.db
-
-#  nginx:
-#    build: ./nginx
-#    volumes:
-#      - static_volume:/home/app/web/staticfiles
-#    ports:
-#      - 8000:80
-#    depends_on:
-#      - web
-
+      - redis_data:/data
 
 volumes:
   postgres_data:
-  static_volume:
+  redis_data:
