--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ gunicorn = "^21.2.0"
 pydantic = {extras = ["dotenv"], version = "^2.5.2"}
 pydantic-settings = "^2.1.0"
 black = "^23.11.0"
+chardet = "^5.2.0"
 
 
 [build-system]
